--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 backports.shutil-get-terminal-size==1.0.0
+djangorestframework==3.12.2
 backports.tempfile==1.0
 Django==3.0.2
 django-mssql-backend==2.8.1
